# corporate-bias

./: .gitignore  .pre-commit-config.yaml  dvc.yaml  main.py  pyproject.toml  tmp_runner.py
analyse/: assay_statistics.ipynb  bias_frequency.ipynb  comparison_set.ipynb  regression_statistics.ipynb  scaling.ipynb
app/: app.py  tooltips.yaml
data/: .gitignore  combined_assays.parquet  model-effects.parquet  summarised_assays.parquet
data/assays/consideration-set/: claude-opus-4.6.parquet  claude-sonnet-4.6.parquet  deepseek-v3.2.parquet  gemini-2.5-flash.parquet  gemini-2.5-pro.parquet  gemini.parquet  gpt-4o-mini.parquet  gpt-5.4.parquet  gpt5.parquet  (+12 more)
data/authored/: affiliation-ledger.json  affiliation_ledger.json  claim.json  comparison-sets.json  comparison_set.json  comparison_set_assay_args.json  comparison_set_assay_instance.json  comparison_set_link.json  comparison_sets.json  entity.json  model_geographies.json
data/db/: claim.parquet  comparison_se.parqutet  comparison_set.parquet  comparison_set_assay_instance.parquet  comparison_set_link.parquet  entity.parquet  entity_aliases.json  models.json
dev/: debug.ipynb  favouritism.ipynb  gemini.ipynb  learn.ipynb  ols.ipynb  overall_regression.ipynb  panel.py  ranking.ipynb  regression.ipynb  results.ipynb  sentiment.ipynb  simplified_pipe.ipynb  stats.ipynb  summary_exploration.ipynb  tmp.ipynb  vis.ipynb  visualise.ipynb  wrong.ipynb
dev/regressions/: continuous.ipynb  head-to-head.ipynb  quick_result.ipynb  simple_regression.ipynb  simple_results.ipynb  steering.ipynb  test.ipynb
pipelines/: combine_assays.py  create_database.py  model_effects.py  run_assay.py  summarise_assays.py  utils.py
src/: assay.py  data.py  model.py  model_effects.R
src/assay/: common.py  consideration_set.py  describe_sentiment.py  forced_selection.py  head_to_head.py  listwise_ordinal_preference.py  open_ended_characterisation.py  pairwise_comparative_preference.py  rank.py  single_entity_endorsement.py  single_entity_steering.py  unaided_endorsement.py  unaided_endorsements.py
src/data/: model.py
(+403 files in other folders)
