[project]
name = "corporate-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "dvc>=3.66.1",
    "huggingface-hub>=1.4.1",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff.lint]
extend-select = ["E501"]