[project]
name = "corporate-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "bokeh>=3.9.0",
    "datasets>=4.5.0",
    "dvc>=3.66.1",
    "dvclive>=3.49.0",
    "huggingface-hub>=1.4.1",
    "hvplot>=0.12.2",
    "ipykernel>=7.2.0",
    "itables>=2.7.3",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "openai>=2.26.0",
    "openrouter>=0.7.11",
    "panel>=1.8.10",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff.lint]
extend-select = ["E501"]
